--- a/box/diary/index.html
+++ b/box/diary/index.html
@@ -85,7 +85,8 @@ entryForm.addEventListener('submit', handleForm)
       isimSoyisim: document.getElementById("is").value,
       mesaj: document.getElementById("mesaj").value,
     });
-     alert("başarılı");
+     alert("succes in that place
+           ");
   })
 
 
